<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context="com.example.ending.uisimple.MainActivity"
        android:background="@drawable/common_background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_shadow">
        <Button
            android:id="@+id/LoginBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="6dp"
            android:onClick="onClick"
            android:background="@mipmap/ic_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textColor="@drawable/white"
            android:textSize="20dp"
            android:text="登录"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:id="@+id/LoginWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:text="Watching You"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/LoginWindow"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:hint="@string/Account"
            android:textColor="#ff888888"
            android:textSize="17dp"
            android:theme="@style/MyEditText" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/usernameEdit"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="#ff888888"
            android:textSize="17dp"
            android:theme="@style/MyEditText" />

        <Button
            android:id="@+id/button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/passwordEdit"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/login_button_selector"
            android:onClick="onClick"
            android:text="@string/Login"
            android:textColor="#ffffffff"
            android:textSize="17dp" />
    </RelativeLayout>
</LinearLayout>
